<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title_app"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/label_title_app"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edit_text_gasoline_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="@string/hint_typing_gasoline_price"
        android:gravity="center"
        android:hint="@string/hint_typing_gasoline_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#8D6E63"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_app"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_text_alcohol_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="@string/hint_typing_alcohol_price"
        android:gravity="center"
        android:hint="@string/hint_typing_alcohol_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#8D6E63"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_gasoline_price"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_choose_fuel"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/label_button_choose_fuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_alcohol_price" />

    <TextView
        android:id="@+id/txt_fuel_result"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_fuel"
        tools:text="@string/label_gasoline" />

</androidx.constraintlayout.widget.ConstraintLayout>